# AstrBotRS

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  PRD.md  README.md  build.bat  build_img.bat  compose.override.yml  compose.yml  deny.toml  run_build.bat  setup_env.sh
.cargo/: config.toml
.github/workflows/: ci.yml  docker.yml
api/: Cargo.toml
api/src/: app.rs  frontend.rs  lib.rs  server.rs
api/src/middleware/: auth.rs
api/src/routes/: auth.rs  bots.rs  config.rs  conversations.rs  logs.rs  mod.rs  operations.rs  plugins.rs  providers.rs  stats.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
config_mgr/: Cargo.toml
config_mgr/src/: config.rs  lib.rs
core/: Cargo.toml
core/src/: event_bus.rs  lib.rs  lifecycle.rs  pipeline.rs
db/: Cargo.toml
db/src/: database.rs  lib.rs  models.rs
platform/: Cargo.toml
platform/src/: event.rs  lib.rs  manager.rs  message.rs  message_chain.rs  metadata.rs  traits.rs
platform/src/sources/: mod.rs
platform/src/sources/ecs_bridge/: adapter.rs  client.rs  mod.rs
platform/src/sources/weixin_oc/: adapter.rs  client.rs  crypto.rs  event.rs  mod.rs
plugin/: Cargo.toml
plugin/examples/: hello_plugin.rs
plugin/src/: lib.rs  manager.rs  traits.rs
provider/: Cargo.toml
provider/src/: entities.rs  lib.rs  manager.rs  traits.rs
provider/src/sources/: openai_compat.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: config_test.rs  pipeline_test.rs  provider_test.rs  smoke_test.rs
utils/: Cargo.toml
utils/src/: error.rs  lib.rs  logging.rs
