[package]
name = "astrbot-api"
version = "0.1.0"
edition = "2024"

[dependencies]
astrbot-core = { path = "../core" }
astrbot-utils = { path = "../utils" }
astrbot-config-mgr = { path = "../config_mgr" }
astrbot-db = { path = "../db" }
astrbot-plugin = { path = "../plugin" }
astrbot-provider = { path = "../provider" }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["macros"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
jsonwebtoken = "9"
async-stream = "0.3"
