[package]
name = "astrbot-core"
version = "0.1.0"
edition = "2024"
description = "Core engine for AstrBot RS"

[dependencies]
tokio = { version = "1", features = ["sync", "rt"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
astrbot-utils = { path = "../utils" }
astrbot-config-mgr = { path = "../config_mgr" }
astrbot-db = { path = "../db" }
astrbot-platform = { path = "../platform" }
astrbot-provider = { path = "../provider" }
