[package]
name = "astrbot-db"
version = "0.1.0"
edition = "2024"
description = "Database layer for AstrBot RS"

[dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
astrbot-utils = { path = "../utils" }
