[package]
name = "astrbot-platform"
version = "0.1.0"
edition = "2024"
description = "Platform adapter system for AstrBot RS"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync"] }
astrbot-utils = { path = "../utils" }
