[package]
name = "astrbot-platform"
version = "0.1.0"
edition = "2024"
description = "Platform adapter system for AstrBot RS"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
aes = "0.8"
cipher = "0.4"
generic-array = "0.14"
hex = "0.4"
base64 = "0.22"
md5 = "0.7"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
astrbot-utils = { path = "../utils" }
astrbot-config-mgr = { path = "../config_mgr" }
