[package]
name = "astrbot-provider"
version = "0.1.0"
edition = "2024"
description = "LLM provider system for AstrBot RS"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-stream = "0.1"
url = "2"
tracing = "0.1"
astrbot-utils = { path = "../utils" }
