[package]
name = "astrbot-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
astrbot-core = { path = "../core" }
astrbot-config-mgr = { path = "../config_mgr" }
astrbot-provider = { path = "../provider" }
astrbot-platform = { path = "../platform" }
astrbot-utils = { path = "../utils" }
tokio = { version = "1", features = ["rt", "macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1"
axum = "0.8"
serde_json = "1"
tracing = "0.1"
async-trait = "0.1"
