[package]
name = "astrbot-utils"
version = "0.1.0"
edition = "2024"
description = "Shared utilities for AstrBot RS"

[dependencies]
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "rt"] }
